--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
 </head>
 <body>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDtnXRXG4X3E7SUPkekaCHbxh0a568XmTg",
+    authDomain: "krys404page.firebaseapp.com",
+    databaseURL: "https://krys404page.firebaseio.com",
+    projectId: "krys404page",
+    storageBucket: "krys404page.appspot.com",
+    messagingSenderId: "939354160474",
+    appId: "1:939354160474:web:4351f92aa9630cb745c763",
+    measurementId: "G-YKSY719QQ9"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
 <div class="main">
     <p class="title">404 NOT FOUND</p>
     <div class="grid">
